--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           pip install pytest-playwright
 
       - name: Ensure browsers are installed
-        run: python -m playwright install chromium --with-dependencies
+        run: python -m playwright install chromium --with-deps
 
       - name: RUn tests
         run: |
